src/style/style.scss
:root {
  --small-radius: 15px;
  --input-height: 2rem;

  --form-valid: rgba(20, 126, 20, 0.447);
  --form-invalid: rgba(216, 33, 33, 0.986);

  --dark-green: #4b4d26;
  --light-gree: #80916d;
  --blue: #7d8d86;
  --light-blue: #63776e;
  --beige: #9b6a5b;
  --brown: #613a2b;
  --ivory: #f2f2f2;
  --neon-pink: #f200ff;
  --orange: #925305;
}

@font-face {
  font-family: itim;
  src: url(../assets/Itim/Itim-Regular.ttf);
}
@font-face {
  font-family: open-sans;
  src: url(../assets/Open_Sans/OpenSans-VariableFont_wdth\,wght.ttf);
}

html {
  height: 100vh;
}

body {
  font-family:
    itim,
    open-sans,
    system-ui,
    -apple-system !important;
  height: 100%;
}

// ===LOGIN AND SIGNUP PAGE===
// ===MOBILE FIRST===
body#login {
  background-color: var(--ivory);
  display: flex;
  align-items: center;
  justify-content: center;
}

#welcome-field {
  display: none;
}

#registration-field {
  color: black;
  min-height: 500px;
  max-height: 500px;
  max-width: 300px;
  border: 2px solid var(--dark-green);
  border-radius: var(--small-radius);

  position: relative;
  // top: 20%;
  // right: 10%;
}

form {
  padding-left: 2rem;
}

h2 {
  margin: 3rem 0 0 0 !important;
  font-size: 2rem !important;
}

#welcome {
  font-size: 1.1rem;
  margin-bottom: 2rem;
  width: 90%;
}

input:not([type='checkbox']) {
  background: none;

  border: 1px solid var(--dark-green);
  border-radius: 5px;
  height: var(--input-height);
  width: 90%;

  &::placeholder {
    color: rgba(0, 0, 0, 0.631);
  }

  &:user-valid {
    outline-color: var(--form-valid);
    border: 2px solid var(--form-valid);
  }
  &:user-invalid {
    outline-color: var(--form-invalid);
    border: 2px solid var(--form-invalid);
  }
}

#username-criteria,
#password-criteria {
  color: rgb(233, 28, 28);
  font-weight: 400;
}

#user-name {
  margin-top: 0.1rem;
}

input[type='checkbox'] {
  width: 1.5rem;
  height: 1.1rem;
  margin: 0.7rem 0.2rem 1.1rem -0.1rem !important;
  margin-top: 1.1rem;
  position: relative;

  cursor: pointer;
}

#error-placeholder {
  position: absolute;
}

.entry-button {
  width: 90%;
  height: var(--input-height);
  margin: 0 auto 1.5rem auto;

  border-radius: 7px;
  border: 1px solid var(--blue);

  color: black;
  font-size: 1.3rem;
  cursor: pointer;
  background: linear-gradient(var(--blue), var(--ivory));
}

#registration-btn {
  margin-top: 3rem;
}

.call {
  text-align: center;
  padding-right: 2rem;
}

.page-btn,
#made-by a,
#skip-link a {
  color: var(--orange);
  // text-decoration: none;
  cursor: pointer;
}

#or-container {
  padding-right: 2rem;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.3rem;
  margin-top: 1.3rem;

  div {
    width: 10rem;
    height: 1px;
  }
}
#left-line {
  background: linear-gradient(90deg, (var(--beige)), (var(--dark-green)));
}
#right-line {
  background: linear-gradient(90deg, (var(--dark-green)), (var(--beige)));
}

#skip-link {
  text-align: center;
  padding-right: 1.5rem;
  margin: 1rem 0 2rem 0;
}

.foreground {
  height: 100%;
  width: 100%;
  top: 0;
  position: absolute;
  z-index: -1;
}
.blue-bg {
  background-color: var(--blue);
  opacity: 0.45;
}
.beige-bg {
  background-color: var(--beige);
  opacity: 0.25;
}

#made-by {
  position: absolute;
  bottom: 0px;
  left: 20%;
}

.hidden,
.hidden-svg {
  display: none !important;
}

#error-placeholder {
  color: var(--form-invalid);
}

#rotator-container {
  padding-right: 2rem;
  position: relative;
  display: flex;
  justify-content: center;
}

.rotating-svg {
  animation: rotate 2s infinite linear;
  position: absolute;
  top: 5px;
}

// ===MAIN PAGE MOBILE FIRST===
body#main {
  display: flex;
  flex-direction: column;
  background-color: var(--blue);

  // height: 100vh;
}
#main header {
  background-color: white;
}
#max-width {
  display: flex;
  justify-content: space-between;

  max-width: 1000px;
  margin: auto;
}

// ===HEADER AND SIDEBAR SECTION===

#header-btn-container {
  
  display: none;
}

#burger-btn {
  background-color: white;
  border: none;
  cursor: pointer;
}
#main main {
  background-color: var(--ivory);

  width: min(100%, 1000px);
  margin: 0 auto;
  padding: 0 0 1.5rem 0;
  height: 100vh;
  
}
#main footer {
  background-color: white;
  min-height: 100px;
}
nav,
button,
a {
  color: white; 
}
nav {
  position: fixed;
  display: flex;
  z-index: 5;

  height: 100%;
  width: 100%;

  transform: translateX(-100%);
  transition: transform 0.4s ease-in-out;

  h1 {
    margin-bottom: 0px;
  }
}

#left-nav {
  display: flex;
  flex-direction: column;
  gap: 1rem;

  width: 80%;
  background-color: var(--blue);
  padding: 0px 0.5rem;

  button {
    background-color: var(--blue);
    border: none;
    width: 100%;
    padding: 0px;

    &:hover {
      background-color: var(--light-blue);
    }
  }

  a,
  button {
    display: flex;
    gap: 0.5rem;
    font-size: 1.5rem;
    text-decoration: none;
  }
}

#curr-user-container {
  display: flex;
  gap: 0.5rem;

  &:hover {
    background-color: var(--light-blue);
  }
}
.curr-user {
  font-size: 1.5rem;
  color: var(--dark-green);
}

#right-nav {
  background-color: var(--dark-green);
  box-shadow: 0px -2px 5px var(--dark-green);
  width: 20%;

  button {
    background-color: var(--dark-green);
    border: none;
    cursor: pointer;

    margin-top: 2.3rem;
    width: 100%;

    img {
      margin: auto;
    }
  }
}

.active {
  cursor: pointer;
  background-color: var(--light-blue) !important;
}

nav.visible {
  transform: translateX(0%);
}

// ===MAIN CONTENT OF THE PAGE===

#book-collection {
  height: 85%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin: -1rem 1rem;
}

.glide__track {
  margin: auto;
}

curr-user

.glide {
  background-color: #dddddd;
  border-radius: 5px;

  padding: 0.5rem 1rem;
  min-height: 100px;

  display: flex;
}
.glide__slide {
  background-color: whitesmoke;
  border: 1px solid;
  text-align: center;
  border-radius: 5px;

  min-width: 100px; /* or % */
  flex-shrink: 0;

  display: flex;
  align-items: center;
  height: clamp(7rem, 9vh, 10rem);

  cursor: pointer;
}
.glide__arrow {
  background-color: none !important;
  border: none;

  img {
    width: 50px;
  }
}

.book-genre.book-genre {
  font-size: 1.6rem !important;
  margin-top: 0.5rem !important;
}

.rotate {
  animation: 2s rotate ease-in-out infinite;
}

@keyframes rotate {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (min-width: 800px) {
  #max-width {
    & > img {
      width: 100px;
      height: 100px;
    }
  }
  #burger-btn {
    display: none;
  }

  #header-btn-container {
  display: flex;
  align-items: end;
  gap: 2rem;

  margin-bottom: 1rem;
  margin-right: 1rem;

  button, a {
    background-color: white;
    color: black;
    font-weight: bold;
    border: none;
    
    font-size: 1.2rem;
    text-decoration: none;
    cursor: pointer;
  }
}

}

@media (min-width: 1025px) {
  body#login {
    position: relative;
  }

  #welcome-field {
    left: 150px;
    display: block;
    position: absolute;
    width: clamp(430px, 40vw, 45rem);

    h1 {
      line-height: 1.1;
      font-size: clamp(2.4rem, 4vw, 3.3rem);
    }
    p {
      font-size: clamp(1.4rem, 2vw, 2.3rem);
    }
    span {
      color: var(--orange);
    }
  }
  #registration-field {
    position: absolute;
    right: 10vw;
  }

  .glide__slide {
    height: 8.5rem;
  }
}

